<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:key="pref_intents"
        android:title="Broadcast Intents">


        <EditTextPreference
            android:defaultValue="@string/value_pref_button_up_intent"
            android:dialogTitle="Button Up Intent"
            android:key="@string/key_pref_button_up_intent"
            android:title="Button Up"
            app:useSimpleSummaryProvider="true" />


        <EditTextPreference
            android:defaultValue="@string/value_pref_button_down_intent"
            android:dialogTitle="Button Up Intent"
            android:key="@string/key_pref_button_down_intent"
            android:title="Button Down"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/value_pref_button_tap_intent"
            android:dialogTitle="Button Up Intent"
            android:key="@string/key_pref_button_tap_intent"
            android:title="Tap"
            app:useSimpleSummaryProvider="true" />


        <EditTextPreference
            android:defaultValue="@string/value_pref_button_double_tap_intent"
            android:dialogTitle="Button Up Intent"
            android:key="@string/key_pref_button_double_tap_intent"
            android:title="Double Tap"
            app:useSimpleSummaryProvider="true" />


        <EditTextPreference
            android:defaultValue="@string/value_pref_button_long_press_intent"
            android:dialogTitle="Button Up Intent"
            android:key="@string/key_pref_button_long_press_intent"
            android:title="Long Press"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_show_intents"
            android:summary="Show verbose logging of intents being broadcast"
            android:title="Show Intents" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>